# langchain-for-llm-app-dev-capstone-proj

./: .env.example  .gitignore  README.md  chroma.py  ingestion.py  main.py  pyproject.toml  research_agent.py  research_chain.py
agents/: research_agent.py
libs/chroma/: chroma.py
libs/serpapi/: search.py
loaders/: web_base_loader.py
models/: citation.py  research_answer.py
splitters/: html_splitter.py  text_splitter.py
tools/: config.py  google_deep_search_tool.py  google_scholar_tool.py  google_search_tool.py
